# ArmOS

./: .gitignore  Cargo.toml  README.md  build.rs  linker-boot.ld  linker-qemu.ld  linker.ld
.cargo/: config.toml
docs/: flashing.md
qemu-stm32h745/: .gitignore  README.md
qemu-stm32h745/docs/: board-carrier.md  how-the-machine-works.md  memory-map.md  peripherals.md
qemu-stm32h745/patches/: 0001-hw-arm-add-STM32H745-SoC-and-carrier-machine.patch  0002-hw-display-add-STM32H7-LTDC-layer-1-scanout.patch
qemu-stm32h745/scripts/: bootstrap-deps.sh  build-qemu.sh  ensure-qemu.sh  fetch-qemu.sh  install-global.sh
qemu-stm32h745/tests/smoke/: Makefile  linker.ld  ltdc_bars.c  uart_hello.c
scripts/: qemu-run.sh  symbolize.sh
src/: board.rs  heap.rs  lib.rs  main.rs  panic.rs
src/apps/: mod.rs  proctracker.rs
src/board/: gpio.rs  mod.rs
src/drivers/: mod.rs
src/drivers/display/: ltdc.rs  mod.rs  soft.rs
src/drivers/serial/: mod.rs
src/hal/: clock.rs  gpio.rs  mod.rs  pac.rs  regs.rs  semihost.rs  uart.rs
src/klog/: mod.rs
src/kui/: kdraw.rs  kfont.rs  mod.rs
src/proc/: csched.rs  mod.rs  registry.rs
src/startup/: mod.rs  reset.rs  vectors.rs
src/storage/: mod.rs
