[package]
name = "ArmOS"
version = "0.1.0"
edition = "2024"
build = "build.rs"
default-run = "ArmOS"

[features]
# Default ArmOS: XIP from QUADSPI NOR, main RAM = FMC SDRAM.
# `cargo run` loads the bootloader (MCU flash) + this image (NOR) in QEMU.
#
# Legacy mps2-an500 + semihosting:
#   cargo run --features mps2
default = []
mps2 = []
probe-panic = ["dep:panic-probe", "dep:cortex-m"]
# Allow into_output/into_input on pins hardwired to FMC/QSPI/SWD/etc.
gpio-allow-hardwired = []

[lib]
path = "src/lib.rs"

[dependencies]
cortex-m = { version = "0.7", optional = true }
fontdue = "0.9.3"
panic-probe = { version = "0.3", optional = true }
spin = "0.12.1"
stm32h7 = { version = "0.16.0", default-features = false, features = ["stm32h745cm7"] }

[profile.dev]
panic = "abort"
debug-assertions = false
overflow-checks = false

[profile.release]
panic = "abort"

[[bin]]
name = "ArmOS"
path = "src/main.rs"
test = false
bench = false

# Stage-0: MCU internal flash + DTCM only; jumps to ArmOS in NOR.
[[bin]]
name = "bootloader"
path = "src/bin/bootloader.rs"
test = false
bench = false
